@@ -370,7 +370,10 @@ Trunk (Unreleased)
     HADOOP-9481. Broken conditional logic with HADOOP_SNAPPY_LIBRARY. (Vadim
     Bondarev via atm)
 
-  OPTIMIZATIONS
+    HADOOP-9593. stack trace printed at ERROR for all yarn clients without
+    hadoop.home set (stevel)
+
+    OPTIMIZATIONS
 
     HADOOP-7761. Improve the performance of raw comparisons. (todd)
 
